Responsive webpage mobile and laptop view and landing and home page

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
                 <p>En</p>
             </div>
             <div class="offer">
-                <button class="l-arrow"><img src="./icons/icons8-left-arrow-50.png" alt=""></button>
+                <div class="l-arrow"><img src="./icons/icons8-left-arrow-50.png" alt=""></div>
                 <div class="policy">
                     <p>30 days Return Policy</p>
                     <p>Free Delivery Above $65</p>
                 </div>
-                <button class="r-arrow"><img src="./icons/icons8-right-arrow-50.png" alt=""></button>
+                <div class="r-arrow"><img src="./icons/icons8-right-arrow-50.png" alt=""></div>
             </div>
         </div>
         <div class="header2">
@@ -138,7 +138,7 @@
         <div class="shoes-article">
             <h1 class="ptag">Shop By Style</h1>
             <div class="shoes">
-                <div class="s">
+                <div class="s" id="high-shoes">
                     <img src="https://www.converse.com/on/demandware.static/-/Library-Sites-ConverseSharedLibrary/default/dw9bad4363/firstspirit/be/media/homepage_1/2022_spring/mar_1/D-Converse-WE-HP-3-3-P2-Shop-By-Style-High-Top-A.jpg"
                         alt="" class="image">
                     <p>High Tops</p>
@@ -365,7 +365,8 @@
                     </div>
                     <div class="social-media">
                         <div>
-                            <img src="./icons/icons8-converse-shoe-company-that-primarily-produces-skating-shoes-and-lifestyle-brand-footwear-and-apparel-24.png" alt="">
+                            <img src="./icons/icons8-converse-shoe-company-that-primarily-produces-skating-shoes-and-lifestyle-brand-footwear-and-apparel-24.png"
+                                alt="">
                         </div>
                         <div class="gap"></div>
                         <div>
@@ -399,6 +400,169 @@
                         <option value="Shipping Chain">Shipping Chain</option>
                         <option value="Contact Us">Contact Us</option>
                     </select>
+                </div>
+                <div class="footer-flag">
+                    <div class="flag" id="flag">
+                        <img src="./icons/icons8-belgium-48.png" alt="">
+                        <p>Be</p>
+                        <div class="line" id="line"></div>
+                        <p>En</p>
+                    </div>
+                    <div class="copyright">
+                        &copy;2021 Converse Inc.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="shoes-data-page">
+        <div class="banner">
+            <div class="flag">
+                <img src="./icons/icons8-belgium-48.png" alt="">
+                <p>Be</p>
+                <div class="line"></div>
+                <p>En</p>
+            </div>
+            <div class="offer">
+                <div class="l-arrow"><img src="./icons/icons8-left-arrow-50.png" alt=""></div>
+                <div class="policy">
+                    <p>30 days Return Policy</p>
+                    <p>Free Delivery Above $65</p>
+                </div>
+                <div class="r-arrow"><img src="./icons/icons8-right-arrow-50.png" alt=""></div>
+            </div>
+        </div>
+        <div class="header2">
+            <div class="hamburger">
+                <img src="./icons/icons8-hamburger-menu-24.png" alt="">
+            </div>
+            <div class="bar1">
+                <div class="bar2">
+                    <h1 class="converse">converse</h1>
+                    <div class="logo">
+                        <img src="./icons/icons8-star-24.png" alt="" class="star">
+                        <img src="./icons/icons8-right-arrow-32.png" alt="" class="arrow">
+                    </div>
+                </div>
+                <div class="items">
+                    <div>Femme</div>
+                    <div>Man</div>
+                    <div>Child</div>
+                    <div>Customize</div>
+                    <div>Limited Edition</div>
+                    <div>Specials</div>
+                    <div>Collections</div>
+                </div>
+            </div>
+            <div class="vectors">
+                <div class="vectors">
+                    <button class="user">
+                        <img src="./icons/icons8-user-32.png" alt="" id="user">
+                    </button>
+                    <button class="bag">
+                        <img src="./icons/icons8-shopping-cart-24.png" alt="">
+                    </button>
+                    <button class="search1">
+                        <img src="./icons/icons8-search-32.png" alt="" id="search">
+                    </button>
+
+                </div>
+                <button class="search2">
+                    <img src="./icons/icons8-search-32 (1).png" alt="" id="search2">
+                </button>
+            </div>
+        </div>
+        <div class="main">
+            <div class="main-heading">
+                <p>Home / All / Shoes /</p>
+                <h1>All High Tops</h1>
+            </div>
+            <div class="main-button">
+                <button>Fillter</button>
+                <p>344 Results</p>
+            </div>
+        </div>
+        <div class="shoes-data">
+            
+        </div>
+        <div class="shoes-content">
+            <h1>All Converse High Tops</h1>
+            <p>Whether classic or modern: Converse high tops encapsule a wide range of collections from All Star, Classic Chuck, Chuck' 70, Jack Purcell to the latest One Star. Each collection offers an array of colours and patterns to match your current mood and is designed as multi-purpose footwear. Dashing down the street with your Converse Cons, strolling through the park in a pair of Classic Chuck - Converse high tops never go out of style!</p>
+        </div>
+        <div class="cart8">
+            <div class="footer">
+                <div class="footer-top">
+                    <div class="description">
+                        <div>NEVER MISS A BEAT</div>
+                        <p>Sign up and receive 20% off your next purchase</p>
+                    </div>
+                    <div class="footer-signup">
+                        <div class="email">
+                            <input type="text" placeholder="Enter Email Address" id="email">
+                        </div>
+                        <div class="date-of-birth">
+                            <input type="number" placeholder="Date of Birth (DD/MM/YYYY)" id="dob">
+                        </div>
+                        <div class="gender-joinbtn">
+                            <select name="Gender" id="gender">
+                                <option value="Gender">Gender</option>
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
+                                <option value="Do Not Specify">Do Not Specify</option>
+                            </select>
+                            <div class="join-now">
+                                <button>Join Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="social-media">
+                        <div>
+                            <img src="./icons/icons8-converse-shoe-company-that-primarily-produces-skating-shoes-and-lifestyle-brand-footwear-and-apparel-24.png"
+                                alt="">
+                        </div>
+                        <div class="gap"></div>
+                        <div>
+                            <img src="./icons/icons8-twitter-circled-30.png" alt="">
+                        </div>
+                        <div>
+                            <img src="./icons/icons8-facebook-30.png" alt="">
+                        </div>
+                        <div>
+                            <img src="./icons/icons8-instagram-30.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-down">
+                    <div class="about"></div>
+                    <div class="shopping"></div>
+                    <div class="legal"></div>
+                    <div class="nike"></div>
+                </div>
+                <div class="footer-button">
+                    <select class="more">
+                        <option value="More">More</option>
+                        <option value="Converse Outlet">Converse Outlet</option>
+                        <option value="Order Status">Order Status</option>
+                        <option value="Orders / Returns">Orders / Returns</option>
+                        <option value="Shipping / Delivery">Shipping / Delivery</option>
+                        <option value="Products">Products</option>
+                        <option value="Careers">Careers</option>
+                        <option value="Our Story">Our Story</option>
+                        <option value="Terms of Use">Terms of Use</option>
+                        <option value="Shipping Chain">Shipping Chain</option>
+                        <option value="Contact Us">Contact Us</option>
+                    </select>
+                </div>
+                <div class="footer-flag">
+                    <div class="flag" id="flag">
+                        <img src="./icons/icons8-belgium-48.png" alt="">
+                        <p>Be</p>
+                        <div class="line" id="line"></div>
+                        <p>En</p>
+                    </div>
+                    <div class="copyright">
+                        ©2021 Converse Inc.
+                    </div>
                 </div>
             </div>
         </div>
