Responsive webpage mobile and laptop view and landing and home page

--- a/index.html
+++ b/index.html
@@ -381,10 +381,41 @@
                     </div>
                 </div>
                 <div class="footer-down">
-                    <div class="about"></div>
-                    <div class="shopping"></div>
-                    <div class="legal"></div>
-                    <div class="nike"></div>
+                    <div class="about">
+                        <h1>About</h1>
+                        <ul>
+                            <li>Our Story</li>
+                            <li>Careers</li>
+                            <li>Contact Us</li>
+                        </ul>
+                    </div>
+                    <div class="shopping">
+                        <h1>Shopping</h1>
+                        <ul>
+                            <li>Converse Outlet</li>
+                            <li>Order Status</li>
+                            <li>Orders / Returns</li>
+                            <li>Shipping / Delivery</li>
+                            <li>Products</li>
+                            <li>Retail Stores</li>
+                        </ul>
+                    </div>
+                    <div class="legal">
+                        <h1>Leagal</h1>
+                        <ul>
+                            <li>Shipping Chain</li>
+                            <li>Terms of Use</li>
+                            <li>Privacy & Cookie Policy</li>
+                            <li>Cookie Settings</li>
+                        </ul>
+                    </div>
+                    <div class="nike">
+                        <h1>Nike Inc. Sites</h1>
+                        <ul>
+                            <li>Nike.com</li>
+                            <li>Jordan.com</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="footer-button">
                     <select class="more">
@@ -533,10 +564,41 @@
                     </div>
                 </div>
                 <div class="footer-down">
-                    <div class="about"></div>
-                    <div class="shopping"></div>
-                    <div class="legal"></div>
-                    <div class="nike"></div>
+                    <div class="about">
+                        <h1>About</h1>
+                        <ul>
+                            <li>Our Story</li>
+                            <li>Careers</li>
+                            <li>Contact Us</li>
+                        </ul>
+                    </div>
+                    <div class="shopping">
+                        <h1>Shopping</h1>
+                        <ul>
+                            <li>Converse Outlet</li>
+                            <li>Order Status</li>
+                            <li>Orders / Returns</li>
+                            <li>Shipping / Delivery</li>
+                            <li>Products</li>
+                            <li>Retail Stores</li>
+                        </ul>
+                    </div>
+                    <div class="legal">
+                        <h1>Leagal</h1>
+                        <ul>
+                            <li>Shipping Chain</li>
+                            <li>Terms of Use</li>
+                            <li>Privacy & Cookie Policy</li>
+                            <li>Cookie Settings</li>
+                        </ul>
+                    </div>
+                    <div class="nike">
+                        <h1>Nike Inc. Sites</h1>
+                        <ul>
+                            <li>Nike.com</li>
+                            <li>Jordan.com</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="footer-button">
                     <select class="more">
