Responsive webpage mobile and laptop view and landing and home page

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
             <p class="title">Nos nouvelles Chuck&nbsp;70 arborent un style original et audacieux&nbsp;: semelles
                 surélevées et surdimensionnées, ou encore détails en caoutchouc déstructurés.</p>
             <div class="btn">
-                <div>Shop The Collection</div>
-                <div>Explore</div>
+                <button>Shop The Collection</button>
+                <button>Explore</button>
             </div>
         </div>
         <div class="shoes-article">
@@ -514,11 +514,15 @@
             </div>
         </div>
         <div class="shoes-data">
-            
+
         </div>
         <div class="shoes-content">
             <h1>All Converse High Tops</h1>
-            <p>Whether classic or modern: Converse high tops encapsule a wide range of collections from All Star, Classic Chuck, Chuck' 70, Jack Purcell to the latest One Star. Each collection offers an array of colours and patterns to match your current mood and is designed as multi-purpose footwear. Dashing down the street with your Converse Cons, strolling through the park in a pair of Classic Chuck - Converse high tops never go out of style!</p>
+            <p>Whether classic or modern: Converse high tops encapsule a wide range of collections from All Star,
+                Classic Chuck, Chuck' 70, Jack Purcell to the latest One Star. Each collection offers an array of
+                colours and patterns to match your current mood and is designed as multi-purpose footwear. Dashing down
+                the street with your Converse Cons, strolling through the park in a pair of Classic Chuck - Converse
+                high tops never go out of style!</p>
         </div>
         <div class="cart8">
             <div class="footer">
