--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             </div>
             <div class="offer">
                 <div class="l-arrow"><img src="./icons/icons8-left-arrow-50.png" alt=""></div>
-                <div class="policy">
-                    <p>30 days Return Policy</p>
-                    <p>Free Delivery Above $65</p>
+                <div id="policy">
+                    <p class="">30 days Return Policy</p>
+                    <p class="">Free Delivery Above $65</p>
                 </div>
                 <div class="r-arrow"><img src="./icons/icons8-right-arrow-50.png" alt=""></div>
             </div>
