Responsive webpage mobile and laptop view and landing and home page and history pushState and popState done

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <img src="./icons/icons8-left-arrow-50.png" alt="" />
           </div>
           <div class="parent-policy">
-            <div id="policy">
+            <div class="policy">
               <div>30 days Return Policy</div>
               <div>Free Delivery Above $65</div>
             </div>
@@ -558,9 +558,11 @@
           <div class="l-arrow">
             <img src="./icons/icons8-left-arrow-50.png" alt="" />
           </div>
-          <div class="policy">
-            <p>30 days Return Policy</p>
-            <p>Free Delivery Above $65</p>
+          <div class="parent-policy">
+            <div class="policy">
+              <div>30 days Return Policy</div>
+              <div>Free Delivery Above $65</div>
+            </div>
           </div>
           <div class="r-arrow">
             <img src="./icons/icons8-right-arrow-50.png" alt="" />
@@ -616,7 +618,7 @@
           <h1>All High Tops</h1>
         </div>
         <div class="main-button">
-          <button>Fillter</button>
+          <button>Filters</button>
           <p>344 Results</p>
         </div>
       </div>
