--- a/index.html
+++ b/index.html
@@ -24,36 +24,36 @@
         <div class="america">
           <h1 class="heading">North America</h1>
           <ul>
-            <li>United States (EN)</li>
-            <li>Cnada (EN) | Canada (FR)</li>
+            <li class="bel">United States (EN)</li>
+            <li class="bel">Cnada (EN) | Canada (FR)</li>
           </ul>
         </div>
         <div class="europe">
           <h1 class="heading">Europe</h1>
           <ul>
-            <li id="belgium">Belgium | Belgique | België</li>
-            <li>Denmark</li>
-            <li>Deutschland | Germany</li>
-            <li>España | Spain</li>
-            <li>Finland</li>
-            <li>France</li>
-            <li>Great Britain</li>
-            <li>Ireland</li>
-            <li>Italia | Italy</li>
-            <li>Luxembourg (FR) | Luxembourg (EN)</li>
-            <li>Nederland | Netherlands</li>
-            <li>Österreich | Austria</li>
-            <li>Россия</li>
-            <li>Polska</li>
-            <li>Portugal</li>
+            <li class="bel">Belgium | Belgique | België</li>
+            <li class="bel">Denmark</li>
+            <li class="bel">Deutschland | Germany</li>
+            <li class="bel">España | Spain</li>
+            <li class="bel">Finland</li>
+            <li class="bel">France</li>
+            <li class="bel">Great Britain</li>
+            <li class="bel">Ireland</li>
+            <li class="bel">Italia | Italy</li>
+            <li class="bel">Luxembourg (FR) | Luxembourg (EN)</li>
+            <li class="bel">Nederland | Netherlands</li>
+            <li class="bel">Österreich | Austria</li>
+            <li class="bel">Россия</li>
+            <li class="bel">Polska</li>
+            <li class="bel">Portugal</li>
           </ul>
         </div>
         <div class="asia">
           <h1 class="heading">Asia Pacific</h1>
           <ul>
-            <li>Australia</li>
-            <li>China | 中国</li>
-            <li>Korea | >대한민국</li>
+            <li class="bel">Australia</li>
+            <li class="bel">China | 中国</li>
+            <li class="bel">Korea | >대한민국</li>
           </ul>
         </div>
       </div>
